# SmartTimetable

./: .gitignore  CMakeLists.txt  README.md
include/: DataStructures.hpp  Graph.hpp
src/: Graph.cpp  main.cpp
